--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ footer {
   height: 200px;
   max-width: 200px;
   object-fit: cover;
+  object-position: center top;
   border-radius: 50%;
   display: block;
   margin: 30px auto;
